added backup css

--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Neonderthaw&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap">
 
     <!-- Styles -->
+    <!-- Base Styles -->
+    <link rel="stylesheet" href="./assets/css/_index.css">
+    <link rel="stylesheet" href="./assets/css/base/_resets.css">
+    <link rel="stylesheet" href="./assets/css/base/_variables.css">
+
+    <!-- Layout Styles -->
+    <link rel="stylesheet" href="./assets/css/layouts/_header.css">
+    <link rel="stylesheet" href="./assets/css/layouts/_main.css">
+    <link rel="stylesheet" href="./assets/css/layouts/_hero-section.css">
+    <link rel="stylesheet" href="./assets/css/layouts/_about-section.css">
+    <link rel="stylesheet" href="./assets/css/layouts/_work-section.css">
+    <link rel="stylesheet" href="./assets/css/layouts/_contact-section.css">
+
+    <!-- Component Styles -->
+    <link rel="stylesheet" href="./assets/css/components/_helpers.css">
+
     <link rel="stylesheet" href="./assets/css/_index.css">
 
     <!-- Favicon -->
