--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <!-- Essential Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- SEO & Accessibility -->
     <title>Chef Luu | Culinary Artistry Redefined</title>
@@ -19,30 +18,29 @@
     <meta property="og:image" content="./assets/images/social-preview.jpg">
 
     <!-- Preload Key Assets -->
-    <link rel="preload" href="Chef-Luu/assets/css/_index.css" as="style">
+    <link rel="preload" href="./assets/css/_index.css" as="style">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=DynaPuff&family=Neonderthaw&family=Sour+Gummy&display=swap" as="font" type="font/woff2" crossorigin>
 
     <!-- Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Neonderthaw&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap">
 
     <!-- Styles -->
-     <link rel="stylesheet" href="Chef-Luu/assets/css/_index.css">
 
     <!-- Base Styles -->
-    <link rel="stylesheet" href="Chef-Luu/assets/css/_index.css">
-    <link rel="stylesheet" href="Chef-Luu/assets/css/base/_resets.css">
-    <link rel="stylesheet" href="Chef-Luu/assets/css/base/_variables.css">
+    <link rel="stylesheet" href="./assets/css/_index.css">
+    <link rel="stylesheet" href="./assets/css/base/_resets.css">
+    <link rel="stylesheet" href="./assets/css/base/_variables.css">
 
     <!-- Layout Styles -->
-    <link rel="stylesheet" href="Chef-Luu/assets/css/layouts/_header.css">
-    <link rel="stylesheet" href="Chef-Luu/assets/css/layouts/_main.css">
-    <link rel="stylesheet" href="Chef-Luu/assets/css/layouts/_hero-section.css">
-    <link rel="stylesheet" href="Chef-Luu/assets/css/layouts/_about-section.css">
-    <link rel="stylesheet" href="Chef-Luu/assets/css/layouts/_work-section.css">
-    <link rel="stylesheet" href="Chef-Luu/assets/css/layouts/_contact-section.css">
+    <link rel="stylesheet" href="./assets/css/layouts/_header.css">
+    <link rel="stylesheet" href="./assets/css/layouts/_main.css">
+    <link rel="stylesheet" href="./assets/css/layouts/_hero-section.css">
+    <link rel="stylesheet" href="./assets/css/layouts/_about-section.css">
+    <link rel="stylesheet" href="./assets/css/layouts/_work-section.css">
+    <link rel="stylesheet" href="./assets/css/layouts/_contact-section.css">
 
     <!-- Component Styles -->
-    <link rel="stylesheet" href="Chef-Luu/assets/css/components/_helpers.css">
+    <link rel="stylesheet" href="./assets/css/components/_helpers.css">
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg">
