head tag paths fix

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:image" content="./assets/images/social-preview.jpg">
 
     <!-- Preload Key Assets -->
-    <link rel="preload" href="./assets/css/_index.css" as="style">
+    <link rel="preload" href="assets/css/_index.css" as="style">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=DynaPuff&family=Neonderthaw&family=Sour+Gummy&display=swap" as="font" type="font/woff2" crossorigin>
 
     <!-- Fonts -->
@@ -27,24 +27,24 @@
     <!-- Styles -->
 
     <!-- Base Styles -->
-    <link rel="stylesheet" href="./assets/css/_index.css">
-    <link rel="stylesheet" href="./assets/css/base/_resets.css">
-    <link rel="stylesheet" href="./assets/css/base/_variables.css">
+    <link rel="stylesheet" href="assets/css/_index.css">
+    <link rel="stylesheet" href="assets/css/base/_resets.css">
+    <link rel="stylesheet" href="assets/css/base/_variables.css">
 
     <!-- Layout Styles -->
-    <link rel="stylesheet" href="./assets/css/layouts/_header.css">
-    <link rel="stylesheet" href="./assets/css/layouts/_main.css">
-    <link rel="stylesheet" href="./assets/css/layouts/_hero-section.css">
-    <link rel="stylesheet" href="./assets/css/layouts/_about-section.css">
-    <link rel="stylesheet" href="./assets/css/layouts/_work-section.css">
-    <link rel="stylesheet" href="./assets/css/layouts/_contact-section.css">
+    <link rel="stylesheet" href="assets/css/layouts/_header.css">
+    <link rel="stylesheet" href="assets/css/layouts/_main.css">
+    <link rel="stylesheet" href="assets/css/layouts/_hero-section.css">
+    <link rel="stylesheet" href="assets/css/layouts/_about-section.css">
+    <link rel="stylesheet" href="assets/css/layouts/_work-section.css">
+    <link rel="stylesheet" href="assets/css/layouts/_contact-section.css">
 
     <!-- Component Styles -->
-    <link rel="stylesheet" href="./assets/css/components/_helpers.css">
+    <link rel="stylesheet" href="assets/css/components/_helpers.css">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg">
-    <link rel="apple-touch-icon" href="./assets/favicon-apple.png">
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
+    <link rel="apple-touch-icon" href="assets/favicon-apple.png">
 
 </head>
 <body>
