--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- SEO & Accessibility -->
     <title>Chef Luu | Culinary Artistry Redefined</title>
     <meta name="description" content="Chef Luu's portfolio: Bold creativity meets soulful cuisine. Explore culinary artistry and hire Chef Luu for unforgettable dining experiences.">
-    <meta name="author" content="Chef Luu">
+    <meta name="author" content="DEV DOC">
 
     <!-- Open Graph (Social Media) -->
     <meta property="og:title" content="Chef Luu | Culinary Artistry Redefined">
