--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html lang="en">
 <head>
-
     <!-- Essential Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,23 +14,21 @@
     <meta property="og:description" content="Bold creativity meets soulful cuisine. Explore Chef Luu's portfolio.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://chefluu.com">
-    <meta property="og:image" content="./assets/images/social-preview.jpg">
+    <meta property="og:image" content="/assets/images/social-preview.jpg">
 
     <!-- Preload Key Assets -->
-    <link rel="preload" href="./assets/css/_index.css" as="style">
+    <link rel="preload" href="./assets/css/index.css" as="style">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=DynaPuff&family=Neonderthaw&family=Sour+Gummy&display=swap" as="font" type="font/woff2" crossorigin>
+
+    <!--CSS Import-->
+    <link rel="stylesheet" href="./assets/css/index.css">
 
     <!-- Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Neonderthaw&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap">
 
-    <!--Styles-->
-     <link rel="stylesheet" href="./assets/css/_index.css">
-
-
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg">
-    <link rel="apple-touch-icon" href="./assets/favicon-apple.png">
-
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
+    <link rel="apple-touch-icon" href="/assets/favicon-apple.png">
 </head>
 <body>
 
@@ -40,7 +37,7 @@
     <!--Logo-->
     <div id="logo">
         <h1>
-            <a href="./index.html">Chef Luu</a>
+            <a href="/index.html">Chef Luu</a>
         </h1>
     </div>
 
@@ -48,9 +45,9 @@
     <nav id="menu">
         <!--Desktop Navigation-->
         <ul class="__desktop-nav">
-            <li><a href="./about.html">About Me</a></li>
-            <li><a href="./menu.html">My Work</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="/about.html">About Me</a></li>
+            <li><a href="/menu.html">My Work</a></li>
+            <li><a href="/contact.html">Contact</a></li>
         </ul>
 
         <!--Mobile Navigation-->
@@ -65,10 +62,9 @@
 
             <!--Navigation Items-->
             <ul class="__nav-items">
-                
-                <li class="__nav-item"><a href="./about.html">About Me</a></li>
-                <li class="__nav-item"><a href="./menu.html">My Work</a></li>
-                <li class="__nav-item"><a href="./contact.html">Contact</a></li>
+                <li class="__nav-item"><a href="/about.html">About Me</a></li>
+                <li class="__nav-item"><a href="/menu.html">My Work</a></li>
+                <li class="__nav-item"><a href="/contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -93,7 +89,7 @@
 
             <!--Hero Image-->
             <div class="__hero-img-wrapper">
-                <img src="./assets/images/main-hero-image.png" alt="">
+                <img src="/assets/images/main-hero-image.png" alt="">
             </div>
         </div>
     </section>
@@ -112,7 +108,7 @@
             <!--Main Introduction-->
             <div class="__intro-block">
                 <div class="__profile-image">
-                    <img src="./assets/images/chef-luu.jpg" alt="Chef Luu" />
+                    <img src="/assets/images/chef-luu.jpg" alt="Chef Luu" />
                 </div>
                 <p class="__intro-text">
                     Emerging from the vibrant city of Nelspruit, I'm Chef Luu — a culinary artist passionate about creating extraordinary dining experiences that tell a story through every bite.
@@ -337,16 +333,16 @@
                     <h3>Fine Dining Collection</h3>
                     <p>Elegant plating and sophisticated flavor combinations</p>
                     <div class="__image-grid">
-                        <img src="./assets/images/fine-dining/dish1.jpg" alt="Seared Duck Breast">
-                        <img src="./assets/images/fine-dining/dish2.jpg" alt="Lobster Thermidor">
-                        <img src="./assets/images/fine-dining/dish3.jpg" alt="Truffle Risotto">
-                        <img src="./assets/images/fine-dining/dish4.jpg" alt="Wagyu Steak">
-                        <img src="./assets/images/fine-dining/dish5.jpg" alt="Seafood Medley">
-                        <img src="./assets/images/fine-dining/dish6.jpg" alt="Foie Gras">
-                        <img src="./assets/images/fine-dining/dish7.jpg" alt="Caviar Service">
-                        <img src="./assets/images/fine-dining/dish8.jpg" alt="Lamb Rack">
-                        <img src="./assets/images/fine-dining/dish9.jpg" alt="Soufflé">
-                        <img src="./assets/images/fine-dining/dish10.jpg" alt="Chocolate Dessert">
+                        <img src="/assets/images/fine-dining/dish1.jpg" alt="Seared Duck Breast">
+                        <img src="/assets/images/fine-dining/dish2.jpg" alt="Lobster Thermidor">
+                        <img src="/assets/images/fine-dining/dish3.jpg" alt="Truffle Risotto">
+                        <img src="/assets/images/fine-dining/dish4.jpg" alt="Wagyu Steak">
+                        <img src="/assets/images/fine-dining/dish5.jpg" alt="Seafood Medley">
+                        <img src="/assets/images/fine-dining/dish6.jpg" alt="Foie Gras">
+                        <img src="/assets/images/fine-dining/dish7.jpg" alt="Caviar Service">
+                        <img src="/assets/images/fine-dining/dish8.jpg" alt="Lamb Rack">
+                        <img src="/assets/images/fine-dining/dish9.jpg" alt="Soufflé">
+                        <img src="/assets/images/fine-dining/dish10.jpg" alt="Chocolate Dessert">
                     </div>
                 </div>
 
@@ -355,16 +351,16 @@
                     <h3>Street Food Fusion</h3>
                     <p>Modern twists on classic street food favorites</p>
                     <div class="__image-grid">
-                        <img src="./assets/images/street-food/dish1.jpg" alt="Gourmet Burger">
-                        <img src="./assets/images/street-food/dish2.jpg" alt="Fusion Tacos">
-                        <img src="./assets/images/street-food/dish3.jpg" alt="Loaded Fries">
-                        <img src="./assets/images/street-food/dish4.jpg" alt="Bao Buns">
-                        <img src="./assets/images/street-food/dish5.jpg" alt="Sliders">
-                        <img src="./assets/images/street-food/dish6.jpg" alt="Street Bowls">
-                        <img src="./assets/images/street-food/dish7.jpg" alt="Wraps">
-                        <img src="./assets/images/street-food/dish8.jpg" alt="Spring Rolls">
-                        <img src="./assets/images/street-food/dish9.jpg" alt="Street Pizza">
-                        <img src="./assets/images/street-food/dish10.jpg" alt="Dessert Fusion">
+                        <img src="/assets/images/street-food/dish1.jpg" alt="Gourmet Burger">
+                        <img src="/assets/images/street-food/dish2.jpg" alt="Fusion Tacos">
+                        <img src="/assets/images/street-food/dish3.jpg" alt="Loaded Fries">
+                        <img src="/assets/images/street-food/dish4.jpg" alt="Bao Buns">
+                        <img src="/assets/images/street-food/dish5.jpg" alt="Sliders">
+                        <img src="/assets/images/street-food/dish6.jpg" alt="Street Bowls">
+                        <img src="/assets/images/street-food/dish7.jpg" alt="Wraps">
+                        <img src="/assets/images/street-food/dish8.jpg" alt="Spring Rolls">
+                        <img src="/assets/images/street-food/dish9.jpg" alt="Street Pizza">
+                        <img src="/assets/images/street-food/dish10.jpg" alt="Dessert Fusion">
                     </div>
                 </div>
 
@@ -373,16 +369,16 @@
                     <h3>Catering Events</h3>
                     <p>Large-scale culinary experiences for special occasions</p>
                     <div class="__image-grid">
-                        <img src="./assets/images/catering/event1.jpg" alt="Wedding Catering">
-                        <img src="./assets/images/catering/event2.jpg" alt="Corporate Event">
-                        <img src="./assets/images/catering/event3.jpg" alt="Buffet Setup">
-                        <img src="./assets/images/catering/event4.jpg" alt="Canapes">
-                        <img src="./assets/images/catering/event5.jpg" alt="Food Station">
-                        <img src="./assets/images/catering/event6.jpg" alt="Plated Service">
-                        <img src="./assets/images/catering/event7.jpg" alt="Dessert Table">
-                        <img src="./assets/images/catering/event8.jpg" alt="Live Cooking">
-                        <img src="./assets/images/catering/event9.jpg" alt="Event Setup">
-                        <img src="./assets/images/catering/event10.jpg" alt="Private Party">
+                        <img src="/assets/images/catering/event1.jpg" alt="Wedding Catering">
+                        <img src="/assets/images/catering/event2.jpg" alt="Corporate Event">
+                        <img src="/assets/images/catering/event3.jpg" alt="Buffet Setup">
+                        <img src="/assets/images/catering/event4.jpg" alt="Canapes">
+                        <img src="/assets/images/catering/event5.jpg" alt="Food Station">
+                        <img src="/assets/images/catering/event6.jpg" alt="Plated Service">
+                        <img src="/assets/images/catering/event7.jpg" alt="Dessert Table">
+                        <img src="/assets/images/catering/event8.jpg" alt="Live Cooking">
+                        <img src="/assets/images/catering/event9.jpg" alt="Event Setup">
+                        <img src="/assets/images/catering/event10.jpg" alt="Private Party">
                     </div>
                 </div>
 
@@ -391,16 +387,16 @@
                     <h3>Healthy & Sustainable</h3>
                     <p>Nutritious dishes using locally sourced ingredients</p>
                     <div class="__image-grid">
-                        <img src="./assets/images/healthy/dish1.jpg" alt="Vegan Bowl">
-                        <img src="./assets/images/healthy/dish2.jpg" alt="Grain Salad">
-                        <img src="./assets/images/healthy/dish3.jpg" alt="Smoothie Bowl">
-                        <img src="./assets/images/healthy/dish4.jpg" alt="Protein Plate">
-                        <img src="./assets/images/healthy/dish5.jpg" alt="Buddha Bowl">
-                        <img src="./assets/images/healthy/dish6.jpg" alt="Raw Dessert">
-                        <img src="./assets/images/healthy/dish7.jpg" alt="Green Juice">
-                        <img src="./assets/images/healthy/dish8.jpg" alt="Superfood Salad">
-                        <img src="./assets/images/healthy/dish9.jpg" alt="Energy Bites">
-                        <img src="./assets/images/healthy/dish10.jpg" alt="Wellness Plate">
+                        <img src="/assets/images/healthy/dish1.jpg" alt="Vegan Bowl">
+                        <img src="/assets/images/healthy/dish2.jpg" alt="Grain Salad">
+                        <img src="/assets/images/healthy/dish3.jpg" alt="Smoothie Bowl">
+                        <img src="/assets/images/healthy/dish4.jpg" alt="Protein Plate">
+                        <img src="/assets/images/healthy/dish5.jpg" alt="Buddha Bowl">
+                        <img src="/assets/images/healthy/dish6.jpg" alt="Raw Dessert">
+                        <img src="/assets/images/healthy/dish7.jpg" alt="Green Juice">
+                        <img src="/assets/images/healthy/dish8.jpg" alt="Superfood Salad">
+                        <img src="/assets/images/healthy/dish9.jpg" alt="Energy Bites">
+                        <img src="/assets/images/healthy/dish10.jpg" alt="Wellness Plate">
                     </div>
                 </div>
 
@@ -409,16 +405,16 @@
                     <h3>Dessert Artistry</h3>
                     <p>Sweet creations that blend taste and visual appeal</p>
                     <div class="__image-grid">
-                        <img src="./assets/images/desserts/sweet1.jpg" alt="Plated Dessert">
-                        <img src="./assets/images/desserts/sweet2.jpg" alt="Chocolate Work">
-                        <img src="./assets/images/desserts/sweet3.jpg" alt="Pastries">
-                        <img src="./assets/images/desserts/sweet4.jpg" alt="Ice Cream">
-                        <img src="./assets/images/desserts/sweet5.jpg" alt="Petit Fours">
-                        <img src="./assets/images/desserts/sweet6.jpg" alt="Cake Design">
-                        <img src="./assets/images/desserts/sweet7.jpg" alt="Macarons">
-                        <img src="./assets/images/desserts/sweet8.jpg" alt="Tarts">
-                        <img src="./assets/images/desserts/sweet9.jpg" alt="Mousses">
-                        <img src="./assets/images/desserts/sweet10.jpg" alt="Confections">
+                        <img src="/assets/images/desserts/sweet1.jpg" alt="Plated Dessert">
+                        <img src="/assets/images/desserts/sweet2.jpg" alt="Chocolate Work">
+                        <img src="/assets/images/desserts/sweet3.jpg" alt="Pastries">
+                        <img src="/assets/images/desserts/sweet4.jpg" alt="Ice Cream">
+                        <img src="/assets/images/desserts/sweet5.jpg" alt="Petit Fours">
+                        <img src="/assets/images/desserts/sweet6.jpg" alt="Cake Design">
+                        <img src="/assets/images/desserts/sweet7.jpg" alt="Macarons">
+                        <img src="/assets/images/desserts/sweet8.jpg" alt="Tarts">
+                        <img src="/assets/images/desserts/sweet9.jpg" alt="Mousses">
+                        <img src="/assets/images/desserts/sweet10.jpg" alt="Confections">
                     </div>
                 </div>
             </div>
@@ -427,7 +423,7 @@
 
 
     <!--Scripts-->
-    <script type="module" defer src="./assets/js/index.js"></script>
+    <script type="module" defer src="/assets/js/index.js"></script>
 
     <script src="https://unpkg.com/riv.js"></script>
 
