images path correction

--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
     <nav id="menu">
         <!--Desktop Navigation-->
         <ul class="__desktop-nav">
-            <li><a href="/about.html">About Me</a></li>
-            <li><a href="/menu.html">My Work</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="#heroSection">Home</a></li>
+            <li><a href="#aboutSection">About</a></li>
+            <li><a href="#workSection">My Work</a></li>
+            <li><a href="#contactSection">Contact Me</a></li>
         </ul>
 
         <!--Mobile Navigation-->
@@ -62,15 +63,14 @@
 
             <!--Navigation Items-->
             <ul class="__nav-items">
-                <li class="__nav-item"><a href="/about.html">About Me</a></li>
-                <li class="__nav-item"><a href="/menu.html">My Work</a></li>
-                <li class="__nav-item"><a href="/contact.html">Contact</a></li>
+            <li class="__nav-item"><a href="#heroSection">Home</a></li>
+            <li class="__nav-item"><a href="#aboutSection">About</a></li>
+            <li class="__nav-item"><a href="#workSection">My Work</a></li>
+            <li class="__nav-item"><a href="#contactSection">Contact Me</a></li>
             </ul>
         </div>
     </nav>
     </header>
-
-
 
     <!--Hero Section-->
     <section id="heroSection" class="">
@@ -89,13 +89,13 @@
 
             <!--Hero Image-->
             <div class="__hero-img-wrapper">
-                <img src="/assets/images/main-hero-image.png" alt="">
+                <img src="./assets/images/main-hero-image.png" alt="">
             </div>
         </div>
     </section>
 
     <!--About Chef Luu-->
-    <section id="aboutSection">
+    <section id="aboutSection" class="">
     <div class="__about-wrapper">
         <!--About Header-->
         <div class="__about-header">
@@ -108,7 +108,7 @@
             <!--Main Introduction-->
             <div class="__intro-block">
                 <div class="__profile-image">
-                    <img src="/assets/images/chef-luu.jpg" alt="Chef Luu" />
+                    <img src="./assets/images/chef-luu.jpg" alt="Chef Luu" />
                 </div>
                 <p class="__intro-text">
                     Emerging from the vibrant city of Nelspruit, I'm Chef Luu — a culinary artist passionate about creating extraordinary dining experiences that tell a story through every bite.
@@ -214,8 +214,8 @@
                 <h3>Let's Create Something Special</h3>
                 <p>Whether you're looking for a private chef, consulting services, or collaboration opportunities, I'm here to bring your culinary vision to life.</p>
                 <div class="__cta-buttons">
-                    <button class="__btn-primary">Hire Me</button>
-                    <button class="__btn-secondary">View Portfolio</button>
+                    <button type="button" class="__btn-primary">Hire Me</button>
+                    <button type="button" class="__btn-secondary">View Portfolio</button>
                 </div>
             </div>
         </div>
@@ -223,7 +223,7 @@
     </section>
 
     <!--Contact Chef Luu-->
-    <section id="contactSection">
+    <section id="contactSection" class="">
         <div class="__contact-wrapper">
             <!--Contact Header-->
             <div class="__contact-header">
@@ -318,7 +318,7 @@
     </section>
 
     <!--Chef Luu's Work-->
-    <section id="workSection">
+    <section id="workSection" class="">
         <div class="__work-wrapper">
             <!--Work Header-->
             <div class="__work-header">
@@ -333,16 +333,16 @@
                     <h3>Fine Dining Collection</h3>
                     <p>Elegant plating and sophisticated flavor combinations</p>
                     <div class="__image-grid">
-                        <img src="/assets/images/fine-dining/dish1.jpg" alt="Seared Duck Breast">
-                        <img src="/assets/images/fine-dining/dish2.jpg" alt="Lobster Thermidor">
-                        <img src="/assets/images/fine-dining/dish3.jpg" alt="Truffle Risotto">
-                        <img src="/assets/images/fine-dining/dish4.jpg" alt="Wagyu Steak">
-                        <img src="/assets/images/fine-dining/dish5.jpg" alt="Seafood Medley">
-                        <img src="/assets/images/fine-dining/dish6.jpg" alt="Foie Gras">
-                        <img src="/assets/images/fine-dining/dish7.jpg" alt="Caviar Service">
-                        <img src="/assets/images/fine-dining/dish8.jpg" alt="Lamb Rack">
-                        <img src="/assets/images/fine-dining/dish9.jpg" alt="Soufflé">
-                        <img src="/assets/images/fine-dining/dish10.jpg" alt="Chocolate Dessert">
+                        <img src="./assets/images/fine-dining/dish1.jpg" alt="Seared Duck Breast">
+                        <img src="./assets/images/fine-dining/dish2.jpg" alt="Lobster Thermidor">
+                        <img src="./assets/images/fine-dining/dish3.jpg" alt="Truffle Risotto">
+                        <img src="./assets/images/fine-dining/dish4.jpg" alt="Wagyu Steak">
+                        <img src="./assets/images/fine-dining/dish5.jpg" alt="Seafood Medley">
+                        <img src="./assets/images/fine-dining/dish6.jpg" alt="Foie Gras">
+                        <img src="./assets/images/fine-dining/dish7.jpg" alt="Caviar Service">
+                        <img src="./assets/images/fine-dining/dish8.jpg" alt="Lamb Rack">
+                        <img src="./assets/images/fine-dining/dish9.jpg" alt="Soufflé">
+                        <img src="./assets/images/fine-dining/dish10.jpg" alt="Chocolate Dessert">
                     </div>
                 </div>
 
@@ -351,16 +351,16 @@
                     <h3>Street Food Fusion</h3>
                     <p>Modern twists on classic street food favorites</p>
                     <div class="__image-grid">
-                        <img src="/assets/images/street-food/dish1.jpg" alt="Gourmet Burger">
-                        <img src="/assets/images/street-food/dish2.jpg" alt="Fusion Tacos">
-                        <img src="/assets/images/street-food/dish3.jpg" alt="Loaded Fries">
-                        <img src="/assets/images/street-food/dish4.jpg" alt="Bao Buns">
-                        <img src="/assets/images/street-food/dish5.jpg" alt="Sliders">
-                        <img src="/assets/images/street-food/dish6.jpg" alt="Street Bowls">
-                        <img src="/assets/images/street-food/dish7.jpg" alt="Wraps">
-                        <img src="/assets/images/street-food/dish8.jpg" alt="Spring Rolls">
-                        <img src="/assets/images/street-food/dish9.jpg" alt="Street Pizza">
-                        <img src="/assets/images/street-food/dish10.jpg" alt="Dessert Fusion">
+                        <img src="./assets/images/street-food/dish1.jpg" alt="Gourmet Burger">
+                        <img src="./assets/images/street-food/dish2.jpg" alt="Fusion Tacos">
+                        <img src="./assets/images/street-food/dish3.jpg" alt="Loaded Fries">
+                        <img src="./assets/images/street-food/dish4.jpg" alt="Bao Buns">
+                        <img src="./assets/images/street-food/dish5.jpg" alt="Sliders">
+                        <img src="./assets/images/street-food/dish6.jpg" alt="Street Bowls">
+                        <img src="./assets/images/street-food/dish7.jpg" alt="Wraps">
+                        <img src="./assets/images/street-food/dish8.jpg" alt="Spring Rolls">
+                        <img src="./assets/images/street-food/dish9.jpg" alt="Street Pizza">
+                        <img src="./assets/images/street-food/dish10.jpg" alt="Dessert Fusion">
                     </div>
                 </div>
 
@@ -369,16 +369,16 @@
                     <h3>Catering Events</h3>
                     <p>Large-scale culinary experiences for special occasions</p>
                     <div class="__image-grid">
-                        <img src="/assets/images/catering/event1.jpg" alt="Wedding Catering">
-                        <img src="/assets/images/catering/event2.jpg" alt="Corporate Event">
-                        <img src="/assets/images/catering/event3.jpg" alt="Buffet Setup">
-                        <img src="/assets/images/catering/event4.jpg" alt="Canapes">
-                        <img src="/assets/images/catering/event5.jpg" alt="Food Station">
-                        <img src="/assets/images/catering/event6.jpg" alt="Plated Service">
-                        <img src="/assets/images/catering/event7.jpg" alt="Dessert Table">
-                        <img src="/assets/images/catering/event8.jpg" alt="Live Cooking">
-                        <img src="/assets/images/catering/event9.jpg" alt="Event Setup">
-                        <img src="/assets/images/catering/event10.jpg" alt="Private Party">
+                        <img src="./assets/images/catering/event1.jpg" alt="Wedding Catering">
+                        <img src="./assets/images/catering/event2.jpg" alt="Corporate Event">
+                        <img src="./assets/images/catering/event3.jpg" alt="Buffet Setup">
+                        <img src="./assets/images/catering/event4.jpg" alt="Canapes">
+                        <img src="./assets/images/catering/event5.jpg" alt="Food Station">
+                        <img src="./assets/images/catering/event6.jpg" alt="Plated Service">
+                        <img src="./assets/images/catering/event7.jpg" alt="Dessert Table">
+                        <img src="./assets/images/catering/event8.jpg" alt="Live Cooking">
+                        <img src="./assets/images/catering/event9.jpg" alt="Event Setup">
+                        <img src="./assets/images/catering/event10.jpg" alt="Private Party">
                     </div>
                 </div>
 
@@ -387,16 +387,16 @@
                     <h3>Healthy & Sustainable</h3>
                     <p>Nutritious dishes using locally sourced ingredients</p>
                     <div class="__image-grid">
-                        <img src="/assets/images/healthy/dish1.jpg" alt="Vegan Bowl">
-                        <img src="/assets/images/healthy/dish2.jpg" alt="Grain Salad">
-                        <img src="/assets/images/healthy/dish3.jpg" alt="Smoothie Bowl">
-                        <img src="/assets/images/healthy/dish4.jpg" alt="Protein Plate">
-                        <img src="/assets/images/healthy/dish5.jpg" alt="Buddha Bowl">
-                        <img src="/assets/images/healthy/dish6.jpg" alt="Raw Dessert">
-                        <img src="/assets/images/healthy/dish7.jpg" alt="Green Juice">
-                        <img src="/assets/images/healthy/dish8.jpg" alt="Superfood Salad">
-                        <img src="/assets/images/healthy/dish9.jpg" alt="Energy Bites">
-                        <img src="/assets/images/healthy/dish10.jpg" alt="Wellness Plate">
+                        <img src="./assets/images/healthy/dish1.jpg" alt="Vegan Bowl">
+                        <img src="./assets/images/healthy/dish2.jpg" alt="Grain Salad">
+                        <img src="./assets/images/healthy/dish3.jpg" alt="Smoothie Bowl">
+                        <img src="./assets/images/healthy/dish4.jpg" alt="Protein Plate">
+                        <img src="./assets/images/healthy/dish5.jpg" alt="Buddha Bowl">
+                        <img src="./assets/images/healthy/dish6.jpg" alt="Raw Dessert">
+                        <img src="./assets/images/healthy/dish7.jpg" alt="Green Juice">
+                        <img src="./assets/images/healthy/dish8.jpg" alt="Superfood Salad">
+                        <img src="./assets/images/healthy/dish9.jpg" alt="Energy Bites">
+                        <img src="./assets/images/healthy/dish10.jpg" alt="Wellness Plate">
                     </div>
                 </div>
 
@@ -405,28 +405,24 @@
                     <h3>Dessert Artistry</h3>
                     <p>Sweet creations that blend taste and visual appeal</p>
                     <div class="__image-grid">
-                        <img src="/assets/images/desserts/sweet1.jpg" alt="Plated Dessert">
-                        <img src="/assets/images/desserts/sweet2.jpg" alt="Chocolate Work">
-                        <img src="/assets/images/desserts/sweet3.jpg" alt="Pastries">
-                        <img src="/assets/images/desserts/sweet4.jpg" alt="Ice Cream">
-                        <img src="/assets/images/desserts/sweet5.jpg" alt="Petit Fours">
-                        <img src="/assets/images/desserts/sweet6.jpg" alt="Cake Design">
-                        <img src="/assets/images/desserts/sweet7.jpg" alt="Macarons">
-                        <img src="/assets/images/desserts/sweet8.jpg" alt="Tarts">
-                        <img src="/assets/images/desserts/sweet9.jpg" alt="Mousses">
-                        <img src="/assets/images/desserts/sweet10.jpg" alt="Confections">
+                        <img src="./assets/images/desserts/sweet1.jpg" alt="Plated Dessert">
+                        <img src="./assets/images/desserts/sweet2.jpg" alt="Chocolate Work">
+                        <img src="./assets/images/desserts/sweet3.jpg" alt="Pastries">
+                        <img src="./assets/images/desserts/sweet4.jpg" alt="Ice Cream">
+                        <img src="./assets/images/desserts/sweet5.jpg" alt="Petit Fours">
+                        <img src="./assets/images/desserts/sweet6.jpg" alt="Cake Design">
+                        <img src="./assets/images/desserts/sweet7.jpg" alt="Macarons">
+                        <img src="./assets/images/desserts/sweet8.jpg" alt="Tarts">
+                        <img src="./assets/images/desserts/sweet9.jpg" alt="Mousses">
+                        <img src="./assets/images/desserts/sweet10.jpg" alt="Confections">
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-
     <!--Scripts-->
-    <script type="module" defer src="/assets/js/index.js"></script>
-
+    <script type="module" defer src="./assets/js/index.js"></script>
     <script src="https://unpkg.com/riv.js"></script>
-
-
 </body>
 </html>
